--- a/templates/formulario_busqueda.html
+++ b/templates/formulario_busqueda.html
@@ -67,7 +67,7 @@
     </div>
 
     <footer>
-        <h5>Tu Nombre / Mini Core Ventas Flask</h5>
+        <h5>Dilan Herrera / Mini Core Ventas Flask</h5>
     </footer>
 </body>
 </html>
